--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,19 @@
             e.preventDefault()
             try {
 
-                const res = await fetch('/api/v1/auth/login',{
-                    method: 'POST',
-                    headers: {
-                        'Content-type': 'application/json'
-                    },
-                    body: JSON.stringify({email: email.value, password: password.value})
-                })
+                const res = await fetch(
+                    'http://localhost:5000/api/v1/auth/login',
+                    {
+                        method: 'POST',
+                        headers: {
+                            'Content-type': 'application/json'
+                        },
+                        body: JSON.stringify({
+                            email: email.value, 
+                            password: password.value
+                        })
+                    }
+                )
 
                 console.log( "status: " + res.status, ", ok: " + res.ok )
 
